--- a/demo/demo.html
+++ b/demo/demo.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snache-js Demo</title>
     <!-- CSS only -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/snachejs@1.0.2/lib/css/snache.css"
-    />
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/snachejs@1.0.3/lib/css/snache.css" />
     <link rel="stylesheet" href="./css/hightlight.css" />
     <link rel="stylesheet" href="./css/demo.css" />
   </head>
@@ -161,7 +158,7 @@
     <script>
       hljs.highlightAll();
     </script>
-    <script src="../lib/js/snache.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/snachejs@1.0.3/lib/js/snache.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
